--- a/Suma2Lealtad/Views/CompanyPrepago/Ordenes.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Ordenes.cshtml
@@ -112,20 +112,19 @@
                             </td>
 
                             <td class="text-right">
-                                @{if (item.status == "N") 
+                                @{if (item.status == "A")
                                   {
-                                    <a href="@Url.Action("DetalleOrden", "CompanyPrepago", new {companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
+                                    <a href="@Url.Action("DetalleOrden", "CompanyPrepago", new { companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
                                         <span class="glyphicon glyphicon-zoom-in"></span>
+                                    </a>
+                                    <a href="@Url.Action("ProcesarOrden", "CompanyPrepago", new { companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
+                                        <span class="glyphicon glyphicon-usd"></span>
                                     </a>
                                   }
-                                }
-                                @{if (item.status == "A") 
+                                  else
                                   {
-                                    <a href="@Url.Action("DetalleOrden", "CompanyPrepago", new {companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
+                                    <a href="@Url.Action("DetalleOrden", "CompanyPrepago", new { companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
                                         <span class="glyphicon glyphicon-zoom-in"></span>
-                                    </a>
-                                    <a href="@Url.Action("ProcesarOrden", "CompanyPrepago", new {companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
-                                        <span class="glyphicon glyphicon-usd"></span>
                                     </a>
                                   }
                                 }
@@ -135,7 +134,7 @@
                 </tbody>
 
             </table>
-            
+
         </div>
         <!-- panel-body -->
 
