Ajustes para mostrar el monto de igual forma en todas las vistas, eliminar botones Ordenes y Recargas de vista beneficiarios

--- a/Suma2Lealtad/Views/CompanyPrepago/Ordenes.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Ordenes.cshtml
@@ -117,7 +117,7 @@
                                     <a href="@Url.Action("DetalleOrden", "CompanyPrepago", new { companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
                                         <span class="glyphicon glyphicon-zoom-in"></span>
                                     </a>
-                                    <a href="@Url.Action("ProcesarOrden", "CompanyPrepago", new { companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
+                                    <a href="@Url.Action("ProcesarOrden", "CompanyPrepago", new { companyid = Model.companyid, id = item.id })" class="btn btn-primary btn-xs" >
                                         <span class="glyphicon glyphicon-usd"></span>
                                     </a>
                                   }
