Ajustes varios NA

--- a/Suma2Lealtad/Views/Afiliado/Edit.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Edit.cshtml
@@ -52,6 +52,7 @@
                             @Html.HiddenFor(model => model.typeid)
                             @Html.HiddenFor(model => model.WebType)
                             @Html.HiddenFor(model => model.estatustarjeta)
+                            @Html.HiddenFor(model => model.companyid)
 
                             <div class="editor-label col-md-4 control-label">
                                 * Tipo de Afiliado :
