--- a/Suma2Lealtad/Views/CompanyPrepago/FilterBeneficiarios.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/FilterBeneficiarios.cshtml
@@ -95,6 +95,7 @@
                             <div class="col-md-12 col-btn">
                                 <div class="pull-right">
                                     <input type="submit" class="btn btn-success btn-md" value="Buscar Afiliado" />
+                                    <a href="@Url.Action("Index", "CompanyPrepago", new {rif = Model.rif })" class="btn btn-danger btn-md">Regresar</a>
                                 </div>
                             </div>
                         </div>
