--- a/Suma2Lealtad/Views/CompanyPrepago/FilterCompany.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/FilterCompany.cshtml
@@ -55,6 +55,7 @@
                             <div class="col-md-12 col-btn">
                                 <div class="pull-right">
                                     <input type="submit" class="btn btn-success btn-md" value="Buscar Compañia" />
+                                    <a href="@Url.Action("", "")" class="btn btn-danger btn-md">Regresar</a>
                                 </div>
                             </div>
                         </div>
