--- a/Suma2Lealtad/Views/Home/Index.cshtml
+++ b/Suma2Lealtad/Views/Home/Index.cshtml
@@ -19,6 +19,6 @@
 
     </form>
     
-    <a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-success btn-xs">CompanyPrepago/FilterCompany</a>  
+    <a href="@Url.Action("FilterCompany", "CompanyPrepago")" class="btn btn-success btn-sm"> Pruebas Prepago</a>  
                 
 }
