--- a/Suma2Lealtad/Views/Parroquia/Index.cshtml
+++ b/Suma2Lealtad/Views/Parroquia/Index.cshtml
@@ -55,7 +55,7 @@
                     <div class="col-md-12 col-tabla-btn">
                         <div class="pull-right">
                             <a class="btn btn-success btn-md" href="@Url.Action("Create", "Parroquia")">Agregar Nuevo Registro</a>
-                            <a class="btn btn-success btn-md" href="@Url.Action("FilterParroquia", "Parroquia")">Regresar</a>
+                            <a class="btn btn-danger btn-md" href="@Url.Action("FilterParroquia", "Parroquia")">Regresar</a>
                         </div>
                     </div>
                     <!--// buttons -->
