--- a/Suma2Lealtad/Views/Afiliado/Index.cshtml
+++ b/Suma2Lealtad/Views/Afiliado/Index.cshtml
@@ -34,18 +34,17 @@
             <table id="afiliados" class="table table-hover">
 
                 <thead>
-
                     <tr>
                         <th>Tipo</th>
-                        <th>Número de Documento</th>
+                        <th>Número de Documento/Cédula</th>
                         <th>Nombre</th>
                         <th>Correo</th>
                         <th>Estatus de Afiliación</th>
                         <th>Número de Tarjeta</th>
                         <th>Estatus de Tarjeta</th>
                         <th class="text-center"></th>
+                        <th class="text-center"></th>
                     </tr>
-
                 </thead>
 
                 <tbody>
@@ -81,18 +80,22 @@
                                 @Html.DisplayFor(modelItem => item.estatustarjeta)
                             </td>
 
-                            <td class="text-right">
+                            <td>
                                 @{if (item.estatus == "Nueva")
                                   {
-                                    <a id="@(item.id)_approve" href="@Url.Action("Aprobar", "Afiliado", new { id = item.id })" class="btn btn-success btn-xs" >
+                                    <a id="@(item.id)_approve" href="@Url.Action("Aprobar", "Afiliado", new { id = item.id })" class="btn btn-success btn-sm" >
                                         <span class="glyphicon glyphicon-ok"></span>
                                     </a>
                                   }
                                 }
-                                <a id="@(item.id)_edit" href="@Url.Action("Edit", "Afiliado", new { id = item.id })" class="btn btn-info btn-xs" >
+                            </td>
+
+                            <td class="text-right">
+                                <a id="@(item.id)_edit" href="@Url.Action("Edit", "Afiliado", new { id = item.id })" class="btn btn-info btn-sm" >
                                     <span class="glyphicon glyphicon-edit"></span>
                                 </a>
                             </td>
+
                         </tr>
                     }
 
@@ -114,7 +117,7 @@
                     <a id="Acreditar" class="btn btn-success btn-md" role="button">Acreditar</a>
                 </div>
                 <div class="pull-right">
-                    <a href="@Url.Action("FilterReview", "Afiliado")" class="btn btn-success btn-md">Regresar</a>
+                    <a href="@Url.Action("FilterReview", "Afiliado")" class="btn btn-danger btn-md">Regresar</a>
                 </div>
             </div>
 
