--- a/Suma2Lealtad/Views/CompanyPrepago/ConfirmacionRecargas.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/ConfirmacionRecargas.cshtml
@@ -138,6 +138,7 @@
                 <div class="col-md-12 col-tabla-btn">
                     <div class="pull-right">
                         <input type="submit" class="btn btn-success btn-md" value="Procesar" />
+                        <a href="@Url.Action("Index", "CompanyPrepago", new { rif = Model.FirstOrDefault().rif })" class="btn btn-danger btn-md">Regresar</a>
                     </div>
                 </div>
 
