--- a/Suma2Lealtad/Views/CompanyPrepago/Delete.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Delete.cshtml
@@ -38,7 +38,7 @@
                             {
                                 @Html.AntiForgeryToken()
 
-                                @Html.HiddenFor(model => model.id)
+                                @Html.HiddenFor(model => model.companyid)
                                 <p>
                                     <input type="submit" class="btn btn-success" value="Aceptar" />
                                     <a href="@Url.Action("Index", "CompanyPrepago")" class="btn btn-danger btn-md" role="button">Cancelar</a>
