--- a/Suma2Lealtad/Views/CompanyPrepago/Index.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Index.cshtml
@@ -47,6 +47,8 @@
                                 <th>Teléfono</th>
                                 <th>Correo</th>
                                 <th class="text-center"></th>
+                                <th class="text-center"></th>
+                                <th class="text-center"></th>
                             </tr>
 
                         </thead>
@@ -74,14 +76,18 @@
                                     <td>
                                         @Html.DisplayFor(modelItem => item.email)
                                     </td>
-                                    <td class="text-right">
-                                        <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = item.companyid })" class="btn btn-success btn-xs">
+                                    <td>
+                                        <a href="@Url.Action("FilterBeneficiarios", "CompanyPrepago", new { companyid = item.companyid })" class="btn btn-success btn-sm">
                                             <span class="glyphicon glyphicon-user"></span>
                                         </a>
-                                        <a href="@Url.Action("Edit", "CompanyPrepago", new { id =  item.companyid })" class="btn btn-info btn-xs">
+                                    </td>
+                                    <td>
+                                        <a href="@Url.Action("Edit", "CompanyPrepago", new { id = item.companyid })" class="btn btn-info btn-sm">
                                             <span class="glyphicon glyphicon-edit"></span>
                                         </a>
-                                        <a href="@Url.Action("Delete", "CompanyPrepago", new { id = item.companyid })" class="btn btn-danger btn-xs">
+                                    </td>
+                                    <td>
+                                        <a href="@Url.Action("Delete", "CompanyPrepago", new { id = item.companyid })" class="btn btn-danger btn-sm">
                                             <span class="glyphicon glyphicon-remove"></span>
                                         </a>
                                     </td>
@@ -152,17 +158,17 @@
 
     $("#RecargaIndividual").click(function () {
         var href = '@Url.Content("~/{controller}/{action}/{params}")';
-         href = href.replace("{controller}", "CompanyPrepago");
-         href = href.replace("{action}", "Recargas");
-         href = href.replace("{params}", rowId);
-         window.location.href = href;
+        href = href.replace("{controller}", "CompanyPrepago");
+        href = href.replace("{action}", "Recargas");
+        href = href.replace("{params}", rowId);
+        window.location.href = href;
     });
 
     $("#RecargaMasiva").click(function () {
         var href = '@Url.Content("~/{controller}/{action}/{params}")';
-         href = href.replace("{controller}", "CompanyPrepago");
-         href = href.replace("{action}", "RecargaMasiva");
-         href = href.replace("{params}", rowId);
-         window.location.href = href;
-     });
+        href = href.replace("{controller}", "CompanyPrepago");
+        href = href.replace("{action}", "RecargaMasiva");
+        href = href.replace("{params}", rowId);
+        window.location.href = href;
+    });
 </script>
