--- a/Suma2Lealtad/Views/CompanyPrepago/Ordenes.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Ordenes.cshtml
@@ -86,6 +86,7 @@
                         <th>Estatus</th>
                         <th>Monto Total</th>
                         <th class="text-center"></th>
+                        <th class="text-center"></th>
                     </tr>
                 </thead>
 
@@ -94,6 +95,8 @@
                     @foreach (var item in Model.Ordenes)
                     {                            
                         <tr data-row-key="@item.id" >
+
+                            @Html.HiddenFor(modelItem => item.status)
 
                             <td>
                                 @Html.DisplayFor(modelItem => item.id)
@@ -104,31 +107,51 @@
                             </td>
 
                             <td>
-                                @Html.DisplayFor(modelItem => item.status)
+                                @{if (item.status == "N")
+                                  {
+                                    <label>Nueva</label>
+                                  }
+                                  else if (item.status == "A")
+                                  {
+                                    <label>Aprobada</label>
+                                  }
+                                  else if (item.status == "R")
+                                  {
+                                    <label>Rechazada</label>
+                                  }
+                                  else if (item.status == "E")
+                                  {
+                                    <label>Efectiva/Procesada</label>
+                                  }
+                                  else
+                                  {
+                                    <label>No definido</label>
+                                  }
+                                }
                             </td>
 
                             <td>
                                 @Html.DisplayFor(modelItem => item.totalamount)
                             </td>
 
-                            <td class="text-right">
+                            <td>
+                                <a href="@Url.Action("DetalleOrden", "CompanyPrepago", new { companyid = Model.companyid, id = item.id })" class="btn btn-success btn-sm" >
+                                    <span class="glyphicon glyphicon-zoom-in"></span>
+                                </a>
+                            </td>
+
+                            <td>
                                 @{if (item.status == "A")
                                   {
-                                    <a href="@Url.Action("DetalleOrden", "CompanyPrepago", new { companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
-                                        <span class="glyphicon glyphicon-zoom-in"></span>
-                                    </a>
-                                    <a href="@Url.Action("ProcesarOrden", "CompanyPrepago", new { companyid = Model.companyid, id = item.id })" class="btn btn-primary btn-xs" >
+                                    <a href="@Url.Action("ProcesarOrden", "CompanyPrepago", new { companyid = Model.companyid, id = item.id })" class="btn btn-info btn-sm" >
                                         <span class="glyphicon glyphicon-usd"></span>
                                     </a>
                                   }
-                                  else
-                                  {
-                                    <a href="@Url.Action("DetalleOrden", "CompanyPrepago", new { companyid = Model.companyid, id = item.id })" class="btn btn-success btn-xs" >
-                                        <span class="glyphicon glyphicon-zoom-in"></span>
-                                    </a>
-                                  }
                                 }
+
                             </td>
+
+
                         </tr>                 
                     }
                 </tbody>
