--- a/Suma2Lealtad/Views/Municipio/Index.cshtml
+++ b/Suma2Lealtad/Views/Municipio/Index.cshtml
@@ -56,7 +56,7 @@
                     <div class="col-md-12 col-tabla-btn">
                         <div class="pull-right">
                             <a class="btn btn-success btn-md" href="@Url.Action("Create", "Municipio")">Agregar Nuevo Registro</a>
-                            <a class="btn btn-success btn-md" href="@Url.Action("FilterMunicipio", "Municipio")">Regresar</a>
+                            <a class="btn btn-danger btn-md" href="@Url.Action("FilterMunicipio", "Municipio")">Regresar</a>
                         </div>
                     </div>
                     <!--// buttons -->
