Firma digital de proyectos Silvelight. Corrección del controlador de Carga Masiva (subir archivo, leer archivo, borrar archivo)

--- a/Suma2Lealtad/Views/CompanyPrepago/ConfirmacionRecargas.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/ConfirmacionRecargas.cshtml
@@ -27,7 +27,8 @@
     <div class="panel panel-default">
 
         <div class="panel-heading clearfix panel-gradient">
-            <h3 class="panel-title">Prepago / Compañia / Beneficiarios / @Html.DisplayFor(model => Model.FirstOrDefault().TipoRecarga)</h3>
+            @*<h3 class="panel-title">Prepago / Compañia / Beneficiarios / @Html.DisplayFor(model => Model.FirstOrDefault().TipoRecarga)</h3>*@
+            <h3 class="panel-title">Prepago / Compañia / Beneficiarios </h3>
         </div>
 
         <div class="panel-body">
