Personalización de Index y Menú en función al tipo de usuario (suma o prepago) - Actualmente se filtra en función al login (admin=usuario suma; ddepablos=usuario prepago)

--- a/Suma2Lealtad/Views/CompanyPrepago/Ordenes.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/Ordenes.cshtml
@@ -109,23 +109,23 @@
                             <td>
                                 @{if (item.status == "N")
                                   {
-                                    <label>Nueva</label>
+                                    <p>Nueva</p>
                                   }
                                   else if (item.status == "A")
                                   {
-                                    <label>Aprobada</label>
+                                    <p>Aprobada</p>
                                   }
                                   else if (item.status == "R")
                                   {
-                                    <label>Rechazada</label>
+                                    <p>Rechazada</p>
                                   }
                                   else if (item.status == "E")
                                   {
-                                    <label>Efectiva/Procesada</label>
+                                    <p>Efectiva/Procesada</p>
                                   }
                                   else
                                   {
-                                    <label>No definido</label>
+                                    <p>No definido</p>
                                   }
                                 }
                             </td>
