--- a/Suma2Lealtad/Views/CompanyPrepago/FilterCompany.cshtml
+++ b/Suma2Lealtad/Views/CompanyPrepago/FilterCompany.cshtml
@@ -7,7 +7,8 @@
 
     <div class="row">
 
-        <div class="col-md-7 col-md-offset-2">
+        <div class="col-md-push-1 col-md-10">
+        @*<div class="col-md-7 col-md-offset-2">*@
 
             <div class="panel panel-default">
 
