--- a/Suma2Lealtad/Views/Home/Index.cshtml
+++ b/Suma2Lealtad/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
             <div class="panel-heading clearfix">
 
                 <div class="editor-label" align="center">
-                     @if(Session["login"].ToString() == "prepago")
+                     @if (Session["login"].ToString() == "prepago" || Session["login"].ToString() == "jmartinezprepago")
                        {
                         <img src="@Url.Content("~/Images/conectadoPrepago.jpg")" />
                        }
